<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPageActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />
    
   <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/btnUser"
	    android:layout_margin="20dp"
	    android:layout_marginTop="120dp"
	    android:onClick="backToList"
	    android:text="@string/button_user" />
   
    <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/btnMerchant"
	    android:layout_below="@+id/btnUser"
	    android:layout_margin="20dp"
	    android:layout_marginTop="130dp"
	    android:onClick="backToList"
	    android:text="@string/button_merchant" />
   

</RelativeLayout>
