<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserFindActivity" >
    
    <ScrollView 
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >
        
    <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
   
        <EditText android:id="@+id/u_zip_code"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:lines="1"
        android:inputType="number"
        android:hint="@string/u_zip_code" />
    
   
    <Spinner
        android:id="@+id/u_category"
        style="@style/AppBaseTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/u_current_time"
        android:layout_below="@+id/u_current_time"
        android:layout_marginTop="50dp"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" 
        android:entries="@array/u_category_arrays"
        android:text="@string/u_category"/>

    <TimePicker
        android:id="@+id/u_start_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/u_category"
        android:layout_below="@+id/u_category"
        android:layout_marginTop="37dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/u_start_timePicker"
        android:layout_below="@+id/u_start_timePicker"
        android:layout_marginTop="15dp"
        android:text="@string/btnSearch" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
